src/test/ui/const-generics/nested-type.full.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/nested-type.rs:16:5
   |
LL |     Foo::<17>::value()
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
